# pereval

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
alembic/: env.py
alembic/versions/: 17ec2c2c2dba_создание_начальной_миграции.py  1b617b67a3db_добавил_полу_img_url_в_perevalimages.py  74c9c5e21ec8_изменены_связи_таблиц_perevallevel_and_.py  95042998aa7d_добавлена_таблица_perevallevel.py  d1ed9a994d06_add_connect_user.py  df8db8171dcd_добавлена_таблица_perevallevel.py  e29c1cb68853_initial_migration.py  e8921e0ab629_initial_migration.py  f341706e09fd_удалил_поле_img_url_в_perevalimages.py
src/: main.py
src/api/: __init__.py
src/api/v1/: pereval.py
src/core/: config.py
src/db/: db.py
src/models/: __init__.py  pereval.py  users.py
src/schemas/: pereval.py
src/services/: crud_pereval.py
src/tests/: conftest.py  test_api_submitData.py  test_api_submitData_id.py  test_api_submitData_put.py  test_api_submitData_put.ry.py  test_api_submitData_user__email.py  test_data.json
