[tool.poetry]
name = "pereval"
version = "0.1.0"
description = ""
authors = ["izorgin.pasha <izorgin.pasha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.115.8"}
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
